feat(css): color variables and font choice in base.scss

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,7 +1,12 @@
 // Variables
 
-$light-grey: #ccc;
-$black: #222;
+$coral: #ed6584;
+$teal: #00d5da;
+$grey: #333333;
 
-$text-color: $black;
+$text: $grey;
+
+
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800);
+$open-sans: 'Open Sans', helvetica, sans-serif;
 
