--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -19,7 +19,7 @@ html {
 
 
 body{
-  font-family: sans-serif;
+  font-family: $open-sans;
   @include zero;
   // Hides close button if there is no js
   &.noscript .close-btn,
@@ -29,8 +29,22 @@ body{
 }
 
 header {
-  padding: 0 1em;
+  padding: 1em 1em;
   position: relative;
+}
+
+.bg {
+  background-image: url(../img/billboard.jpg);
+  height: 25em;
+  &[data-state="slide-open"]{
+      background-image: none;
+    }
+}
+
+.header h1 {
+  color: $coral;
+  padding-top: .5em;
+  margin-top: 0;
 }
 
 .toggle-btn {
@@ -39,34 +53,66 @@ header {
   top: 0;
 }
 
+.close-btn {
+  position: absolute;
+  right: 1em;
+  bottom: 1em;
+  top: 0;
+}
+
 .navigation ul{
   padding: 0;
+  margin-top: 4em;
   li {
     list-style-type: none;
     &:first-child a {
-      border-top: 1px solid $light-grey;
+      border-top: 2px solid $coral;
     }
+      @media only screen and (min-width: 60em) {
+        display: inline-block;
+        float: left;
+        &:first-child a {
+      border-top: none;
+    }
+  }
   }
   a {
     display: block;
-    padding: .5em  1em;
-    border-bottom: 1px solid $light-grey;
+    padding: 1em  1em;
+    border-bottom: 2px solid $coral;
     text-decoration: none;
-    color: $text-color;
+    color: $coral;
     text-align: center;
+    font-weight: 700;
+    text-transform: uppercase;
+    &:hover {
+      color: white;
+      background-color: $coral;
+    }
+    @media only screen and (min-width: 60em) {
+        float: left;
+        border-top: none;
   }
+}
+
+.i-menu {
+  font-size: 1.3em;
+}
+
+.i-close {
+  font-size: 1.3em;
 }
 
 .toggle-btn,
 .close-btn {
-  color: $text-color;
+  color: $coral;
   text-decoration: none;
   height: 40px;
   width: 40px;
   &:before {
-    border: 1px solid $light-grey;
+    border: 2px solid $coral;
     display: inline-block;
-    padding: 13px 11px;
+    padding: 10px 8px;
     height: 40px;
     width: 40px;
   }
@@ -74,7 +120,8 @@ header {
     @include element-invisible;
   }
   &:hover {
-    color: $light-grey;
+      color: white;
+      background-color: $coral;
   }
 }
 
@@ -96,7 +143,7 @@ header {
       height: 100%;
       position: relative;
       transform: translateX(0);
-      transition: all 300ms ease-in-out;
+      transition: all 1s ease-in-out;
     }
 
     &[data-state="slide-open"] .sliding-canvas{
@@ -136,19 +183,6 @@ body.noscript .navigation {
   position: static;
   right: auto;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
