--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,15 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800);
 @-moz-viewport {
   width: device-width;
   scale: 1;
 }
 
 @-ms-viewport {
+  width: device-width;
+  scale: 1;
+}
+
+@-o-viewport {
   width: device-width;
   scale: 1;
 }
@@ -20,6 +26,7 @@
 
 html {
   box-sizing: border-box;
+  -moz-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
@@ -30,7 +37,7 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Open Sans", helvetica, sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -41,8 +48,23 @@ body.noscript .toggle-btn {
 }
 
 header {
-  padding: 0 1em;
+  padding: 1em 1em;
   position: relative;
+}
+
+.bg {
+  background-image: url(../img/billboard.jpg);
+  height: 25em;
+}
+
+.bg[data-state="slide-open"] {
+  background-image: none;
+}
+
+.header h1 {
+  color: #ff6b77;
+  padding-top: .5em;
+  margin-top: 0;
 }
 
 .toggle-btn {
@@ -51,8 +73,16 @@ header {
   top: 0;
 }
 
+.close-btn {
+  position: absolute;
+  right: 1em;
+  bottom: 1em;
+  top: 0;
+}
+
 .navigation ul {
   padding: 0;
+  margin-top: 4em;
 }
 
 .navigation ul li {
@@ -60,21 +90,46 @@ header {
 }
 
 .navigation ul li:first-child a {
-  border-top: 1px solid #ccc;
+  border-top: 2px solid #ff6b77;
+}
+
+@media only screen and (min-width: 60em) {
+  .navigation ul li {
+    display: inline-block;
+    float: left;
+  }
+  .navigation ul li:first-child a {
+    border-top: none;
+  }
 }
 
 .navigation ul a {
   display: block;
-  padding: .5em  1em;
-  border-bottom: 1px solid #ccc;
+  padding: 1em  1em;
+  border-bottom: 2px solid #ff6b77;
   text-decoration: none;
-  color: #222;
+  color: #ff6b77;
   text-align: center;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.navigation ul a:hover {
+  color: white;
+  background-color: #ff6b77;
+}
+
+.i-menu {
+  font-size: 1.3em;
+}
+
+.i-close {
+  font-size: 1.3em;
 }
 
 .toggle-btn,
 .close-btn {
-  color: #222;
+  color: #ff6b77;
   text-decoration: none;
   height: 40px;
   width: 40px;
@@ -82,9 +137,9 @@ header {
 
 .toggle-btn:before,
 .close-btn:before {
-  border: 1px solid #ccc;
+  border: 2px solid #ff6b77;
   display: inline-block;
-  padding: 13px 11px;
+  padding: 10px 8px;
   height: 40px;
   width: 40px;
 }
@@ -100,7 +155,8 @@ header {
 
 .toggle-btn:hover,
 .close-btn:hover {
-  color: #ccc;
+  color: white;
+  background-color: #ff6b77;
 }
 
 /**
@@ -117,15 +173,11 @@ header {
     width: 100%;
     height: 100%;
     position: relative;
-    -webkit-transform: translateX(0);
-        -ms-transform: translateX(0);
-            transform: translateX(0);
-    transition: all 300ms ease-in-out;
+    transform: translateX(0);
+    transition: all 1s ease-in-out;
   }
   .site-wrapper[data-state="slide-open"] .sliding-canvas {
-    -webkit-transform: translateX(-100%);
-        -ms-transform: translateX(-100%);
-            transform: translateX(-100%);
+    transform: translateX(-100%);
   }
   .site-wrapper[data-state="slide-open"] {
     overflow: visible;
