--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -5,16 +5,16 @@
 @viewport { width: device-width; scale: 1; }
 
 html {
-	box-sizing: border-box;
-	-moz-text-size-adjust: 100%;
-	-ms-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%;
-	text-size-adjust: 100%;
+  box-sizing: border-box;
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 
 *, *:before, *:after {
-	box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 
@@ -38,13 +38,15 @@ header {
   height: 25em;
   &[data-state="slide-open"]{
       background-image: none;
-    }
+  }
 }
 
 .header h1 {
   color: $coral;
   padding-top: .5em;
   margin-top: 0;
+  width: 50%;
+  float: left;
 }
 
 .toggle-btn {
@@ -62,37 +64,44 @@ header {
 
 .navigation ul{
   padding: 0;
-  margin-top: 4em;
+  margin-top: 5em;
+  @media only screen and (min-width: 60em) {
+    width: 50%;
+    float: left;
+    margin-top: .5em;
+    left: 0;
+  }
   li {
     list-style-type: none;
-    &:first-child a {
-      border-top: 2px solid $coral;
-    }
-      @media only screen and (min-width: 60em) {
-        display: inline-block;
-        float: left;
+      &:first-child a {
+        border-top: 2px solid $coral;
+      }
+  @media only screen and (min-width: 60em) {
+    display: inline-block;
+    float: left;
         &:first-child a {
-      border-top: none;
-    }
-  }
-  }
-  a {
-    display: block;
-    padding: 1em  1em;
-    border-bottom: 2px solid $coral;
-    text-decoration: none;
-    color: $coral;
-    text-align: center;
-    font-weight: 700;
-    text-transform: uppercase;
-    &:hover {
-      color: white;
-      background-color: $coral;
-    }
-    @media only screen and (min-width: 60em) {
-        float: left;
         border-top: none;
-
+      }
+  }
+    a {
+      display: block;
+      padding: 1em  1em;
+      border-bottom: 2px solid $coral;
+      text-decoration: none;
+      color: $coral;
+      text-align: center;
+      font-weight: 700;
+      text-transform: uppercase;
+      &:hover {
+        color: white;
+        background-color: $coral;
+      }
+      @media only screen and (min-width: 60em) {
+        float: left;
+        border-bottom: none;
+        order-top: none;
+      }   
+    }
   }
 }
 
@@ -110,6 +119,7 @@ header {
   text-decoration: none;
   height: 40px;
   width: 40px;
+  top: 1.5em;
   &:before {
     border: 2px solid $coral;
     display: inline-block;
@@ -184,3 +194,23 @@ body.noscript .navigation {
   position: static;
   right: auto;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
