--- a/css/style.css
+++ b/css/style.css
@@ -52,9 +52,16 @@ header {
   position: relative;
 }
 
+img {
+  display: block;
+  width: 100%;
+}
+
 .bg {
   background-image: url(../img/billboard.jpg);
   height: 25em;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .bg[data-state="slide-open"] {
@@ -92,7 +99,6 @@ header {
     width: 50%;
     float: left;
     margin-top: .5em;
-    left: 0;
   }
 }
 
